# demo/generat/demogenapp-api-interna/openapi/openapi.json
@@ -32,32 +32,67 @@
     "url" : "https://www.caib.es/demogenappapi/interna"
   } ],
   "tags" : [ {
-    "name" : "Items",
-    "description" : "Exemple de Servei de Dades obertes emprant Paginació de PluginsIB-Utils"
-  }, {
     "name" : "ExemplePublicService",
     "description" : "Exemple de Servei JSON d'accés Públic"
+  }, {
+    "name" : "ExempleServei",
+    "description" : "Exemple de Servei de Dades Reutilitzables emprant paginació i retorn complet de dades"
   }, {
     "name" : "Notificacions",
     "description" : "Notificacions a l'APP de Carpeta (missateg a Mòbil)"
   } ],
   "paths" : {
-    "/public/dadesobertes/items/consulta" : {
+    "/public/exemplepublic/versio" : {
       "get" : {
-        "tags" : [ "Items" ],
-        "summary" : "Retorna informació d'exemple per Dades Obertes",
-        "operationId" : "consulta",
+        "tags" : [ "Versió" ],
+        "summary" : "Versio de l'Aplicació",
+        "operationId" : "versio",
+        "parameters" : [ {
+          "name" : "idioma",
+          "in" : "query",
+          "description" : "Codi de l'idioma",
+          "schema" : {
+            "pattern" : "^ca|es$",
+            "type" : "string"
+          },
+          "example" : "ca"
+        } ],
+        "responses" : {
+          "404" : {
+            "description" : "Paràmetres incorrectes",
+            "content" : {
+              "application/json" : { }
+            }
+          },
+          "200" : {
+            "description" : "Versió i idioma",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ExamplePojo"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/public/exempleservei/exempleconsultacompleta" : {
+      "get" : {
+        "tags" : [ "ExempleServei" ],
+        "summary" : "Retorna tots els elements d'informació d'exemple d'una vegada",
+        "operationId" : "exempleconsultacompleta",
         "parameters" : [ {
           "name" : "name",
           "in" : "query",
-          "description" : "Filtre pel Nom del Item. Opcional.",
+          "description" : "Filtre pel Nom de l'objecte ExempleInfo. Opcional.",
           "schema" : {
             "type" : "string"
           }
         }, {
           "name" : "startdate",
           "in" : "query",
-          "description" : "Filtre Data d'inici de la consulta. Opcional. Format  yyyy-MM-dd (ISO 8601)",
+          "description" : "Filtre Data d'inici de la consulta. Opcional. Format yyyy-MM-dd (ISO 8601)",
           "schema" : {
             "pattern" : "^(?:[1-9]\\d{3}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1\\d|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[1-9]\\d(?:0[48]|[2468][048]|[13579][26])|(?:[2468][048]|[13579][26])00)-02-29))$",
             "type" : "string"
@@ -73,9 +108,81 @@
           },
           "example" : "2024-12-31"
         }, {
+          "name" : "language",
+          "in" : "query",
+          "description" : "Idioma en que retornar les dades. Opcional.",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Operació realitzada correctament",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/LlistaDeExempleInfoCompleta"
+                }
+              }
+            }
+          },
+          "404" : {
+            "description" : "Paràmetres incorrectes",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
+                }
+              }
+            }
+          },
+          "500" : {
+            "description" : "Error no controlat",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/public/exempleservei/exempleconsultapaginada" : {
+      "get" : {
+        "tags" : [ "ExempleServei" ],
+        "summary" : "Retorna informació d'exemple paginada",
+        "operationId" : "consultapaginada",
+        "parameters" : [ {
+          "name" : "name",
+          "in" : "query",
+          "description" : "Filtre pel Nom de l'objecte ExempleInfo. Opcional.",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "startdate",
+          "in" : "query",
+          "description" : "Filtre Data d'inici de la consulta. Opcional. Format yyyy-MM-dd (ISO 8601)",
+          "schema" : {
+            "pattern" : "^(?:[1-9]\\d{3}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1\\d|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[1-9]\\d(?:0[48]|[2468][048]|[13579][26])|(?:[2468][048]|[13579][26])00)-02-29))$",
+            "type" : "string"
+          },
+          "example" : "2023-07-19"
+        }, {
+          "name" : "enddate",
+          "in" : "query",
+          "description" : "Filtre Data final de la consulta. Opcional. Format yyyy-MM-dd (ISO 8601)",
+          "schema" : {
+            "pattern" : "^(?:[1-9]\\d{3}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1\\d|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[1-9]\\d(?:0[48]|[2468][048]|[13579][26])|(?:[2468][048]|[13579][26])00)-02-29))$",
+            "type" : "string"
+          },
+          "example" : "2024-12-31"
+        }, {
           "name" : "page",
           "in" : "query",
-          "description" : "Numero de pàgina quan el llistat és paginat. Per defecte 1.",
+          "description" : "Numero de pàgina quan el llistat és paginat. Opcional. Per defecte 1.",
           "schema" : {
             "type" : "integer",
             "format" : "int32"
@@ -83,7 +190,7 @@
         }, {
           "name" : "page-size",
           "in" : "query",
-          "description" : "Número d'elements a retornar per pàgina. Per defecte 15",
+          "description" : "Número d'elements a retornar per pàgina. Opcional. Per defecte 15",
           "schema" : {
             "type" : "integer",
             "format" : "int32"
@@ -123,41 +230,6 @@
               "application/json" : {
                 "schema" : {
                   "$ref" : "#/components/schemas/RestExceptionInfo"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/public/exemplepublic/versio" : {
-      "get" : {
-        "tags" : [ "Versió" ],
-        "summary" : "Versio de l'Aplicació",
-        "operationId" : "versio",
-        "parameters" : [ {
-          "name" : "idioma",
-          "in" : "query",
-          "description" : "Codi de l'idioma",
-          "schema" : {
-            "pattern" : "^ca|es$",
-            "type" : "string"
-          },
-          "example" : "ca"
-        } ],
-        "responses" : {
-          "404" : {
-            "description" : "Paràmetres incorrectes",
-            "content" : {
-              "application/json" : { }
-            }
-          },
-          "200" : {
-            "description" : "Versió i idioma",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ExamplePojo"
                 }
               }
             }
@@ -367,64 +439,52 @@
   },
   "components" : {
     "schemas" : {
+      "ExamplePojo" : {
+        "type" : "object",
+        "properties" : {
+          "versio" : {
+            "type" : "string"
+          }
+        }
+      },
       "ExempleInfo" : {
-        "required" : [ "date", "itemID" ],
+        "required" : [ "date", "itemID", "name" ],
         "type" : "object",
         "properties" : {
           "itemID" : {
             "type" : "integer",
-            "description" : "Identificador inter de l'objecte Item",
+            "description" : "Identificador intern de l'objecte",
             "format" : "int64"
           },
           "name" : {
             "type" : "string",
-            "description" : "Nom de l'entrada Item"
+            "description" : "Nom de l'entrada"
           },
           "value" : {
             "type" : "string",
-            "description" : "Valor de l'entrada Item"
+            "description" : "Valor de l'entrada"
           },
           "date" : {
             "pattern" : "yyyy-MM-dd'T'HH:mm:ss",
             "type" : "string",
-            "description" : "Data en que es va fer l'entrada Item",
+            "description" : "Data en que es va fer crear aquest element",
             "format" : "date-time"
           }
         },
-        "description" : "Exemple de Element de Informació bàsica de Dades Obertes."
+        "description" : "Model de dades de Informació bàsica a retornar."
       },
-      "LlistaDeExempleInfoPaginada" : {
-        "required" : [ "data", "date-download", "items-returned", "page", "page-size", "total-count", "total-pages" ],
+      "LlistaDeExempleInfoCompleta" : {
+        "required" : [ "date-download", "name", "total-count" ],
         "type" : "object",
         "properties" : {
-          "page" : {
-            "type" : "integer",
-            "description" : "Número pàgina. Comença per 1.",
-            "format" : "int32"
-          },
-          "page-size" : {
-            "type" : "integer",
-            "description" : "Mida de pàgina",
-            "format" : "int32"
-          },
-          "total-pages" : {
-            "type" : "integer",
-            "description" : "Número total de pàgines",
-            "format" : "int32"
+          "name" : {
+            "type" : "string",
+            "description" : "Nom descriptiu del que s'està retornant"
           },
           "total-count" : {
             "type" : "integer",
-            "description" : "Numero total d'elements",
+            "description" : "Número total d'elements",
             "format" : "int32"
-          },
-          "items-returned" : {
-            "type" : "integer",
-            "description" : "Numero d'elements retornats",
-            "format" : "int32"
-          },
-          "next" : {
-            "type" : "string",
-            "description" : "Si hi ha més elements, llavors retorna la URL a la següent pàgina de dades."
           },
           "date-download" : {
             "pattern" : "^(?:[1-9]\\d{3}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1\\d|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[1-9]\\d(?:0[48]|[2468][048]|[13579][26])|(?:[2468][048]|[13579][26])00)-02-29)T(?:[01]\\d|2[0-3]):[0-5]\\d:[0-5]\\d(?:Z|[+-][01]\\d:[0-5]\\d)$",
@@ -433,7 +493,7 @@
           },
           "data" : {
             "type" : "array",
-            "description" : "Elements retornats",
+            "description" : "Elements retornats. Pot retornar un null o una llista bida si no hi ha elements.",
             "items" : {
               "$ref" : "#/components/schemas/ExempleInfo"
             }
@@ -468,11 +528,54 @@
         },
         "description" : "Estructura de dades utilitzada per passar informació d'un error"
       },
-      "ExamplePojo" : {
+      "LlistaDeExempleInfoPaginada" : {
+        "required" : [ "date-download", "items-returned", "name", "page", "page-size", "total-count", "total-pages" ],
         "type" : "object",
         "properties" : {
-          "versio" : {
-            "type" : "string"
+          "name" : {
+            "type" : "string",
+            "description" : "Nom descriptiu del que s'està retornant"
+          },
+          "page" : {
+            "type" : "integer",
+            "description" : "Número pàgina. Comença per 1.",
+            "format" : "int32"
+          },
+          "page-size" : {
+            "type" : "integer",
+            "description" : "Mida de pàgina",
+            "format" : "int32"
+          },
+          "total-pages" : {
+            "type" : "integer",
+            "description" : "Número total de pàgines",
+            "format" : "int32"
+          },
+          "total-count" : {
+            "type" : "integer",
+            "description" : "Número total d'elements",
+            "format" : "int32"
+          },
+          "items-returned" : {
+            "type" : "integer",
+            "description" : "Numero d'elements retornats",
+            "format" : "int32"
+          },
+          "next" : {
+            "type" : "string",
+            "description" : "Si hi ha més elements, llavors retorna la URL a la següent pàgina de dades."
+          },
+          "date-download" : {
+            "pattern" : "^(?:[1-9]\\d{3}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1\\d|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[1-9]\\d(?:0[48]|[2468][048]|[13579][26])|(?:[2468][048]|[13579][26])00)-02-29)T(?:[01]\\d|2[0-3]):[0-5]\\d:[0-5]\\d(?:Z|[+-][01]\\d:[0-5]\\d)$",
+            "type" : "string",
+            "description" : "Data i hora en que s'han retornat les dades. Format ISO-8601"
+          },
+          "data" : {
+            "type" : "array",
+            "description" : "Elements retornats. Pot retornar un null o una llista bida si no hi ha elements.",
+            "items" : {
+              "$ref" : "#/components/schemas/ExempleInfo"
+            }
           }
         }
       },
