# demo/generat/demogenapp-api-interna/src/main/java/org/fundaciobit/demogenapp/api/interna/all/exemplereutilitzacio/LlistaDeExempleInfoCompleta.java
@@ -1,0 +1,23 @@
+package org.fundaciobit.demogenapp.api.interna.all.exemplereutilitzacio;
+
+import java.util.List;
+
+import org.fundaciobit.pluginsib.utils.rest.ReuseDataAllElements;
+
+/**
+ * 
+ * @author anadal
+ *
+ */
+public class LlistaDeExempleInfoCompleta extends ReuseDataAllElements<ExempleInfo> {
+
+    public LlistaDeExempleInfoCompleta() {
+        super();
+    }
+
+    public LlistaDeExempleInfoCompleta(List<ExempleInfo> data, int totalcount, String dateDownload, String name) {
+        super(data, totalcount, dateDownload, name);
+    }
+    
+
+}
