# genapp-generator/src/main/resources/genapp/api-interna/src/main/java/x_package_x/api/interna/all/dadesobertes/LlistaDeExempleInfoPaginada.java
@@ -1,19 +1,0 @@
-package ${package}.api.interna.all.dadesobertes;
-
-import java.util.List;
-
-import org.fundaciobit.pluginsib.utils.rest.OpenDataPagination;
-
-
-public class LlistaDeExempleInfoPaginada extends OpenDataPagination<ExempleInfo> {
-
-    public LlistaDeExempleInfoPaginada() {
-        super();
-    }
-
-    public LlistaDeExempleInfoPaginada(List<ExempleInfo> data, int page, int pagesize, int totalpages, int totalcount,
-            String nextUrl, String dateDownload) {
-        super(data, page, pagesize, totalpages, totalcount, nextUrl, dateDownload);
-    }
-
-}
